feat(html): add sticky menu

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -80,7 +80,7 @@
           </a>
         </section>
         <section class="header-bottom">
-          <div class="header-bottom-page-nav-glide">
+          <div id="static-nav-menu" class="header-bottom-page-nav-glide">
             <nav class="header-bottom-page-nav-track">
               <ul class="page-nav-slides">
                 <li class="page-nav-slide active">
@@ -363,7 +363,62 @@
                       </div>
                     </div>
                   </div>
-                  
+                  <div class="cart-dish-card">
+                    <img
+                      class="dish-card-img"
+                      src="../assets/images/cart-dish-img.png"
+                      alt="cart-dish-img"
+                    >
+                    <div class="dish-card-wrapper">
+                      <p class="dish-card-name">
+                        Хинкали жареные с телятиной 4шт.
+                      </p>
+                      <div class="cart-dish-info">
+                        <p class="price-weight">
+                          <span class="price">1250</span>
+                          <span class="currency">₽</span>/
+                          <span class="weight">250</span>гр
+                        </p>
+                        <div class="amount-counter">
+                          <button class="btn counter-minus" type="button">
+                            -
+                          </button>
+                          <span class="counter-amount">1</span>
+                          <button class="btn counter-plus" type="button">
+                            +
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="cart-dish-card">
+                    <img
+                      class="dish-card-img"
+                      src="../assets/images/cart-dish-img.png"
+                      alt="cart-dish-img"
+                    >
+                    <div class="dish-card-wrapper">
+                      <p class="dish-card-name">
+                        Хинкали жареные с телятиной 4шт.
+                      </p>
+                      <div class="cart-dish-info">
+                        <p class="price-weight">
+                          <span class="price">1250</span>
+                          <span class="currency">₽</span>/
+                          <span class="weight">250</span>гр
+                        </p>
+                        <div class="amount-counter">
+                          <button class="btn counter-minus" type="button">
+                            -
+                          </button>
+                          <span class="counter-amount">1</span>
+                          <button class="btn counter-plus" type="button">
+                            +
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </section>
                 <button class="btn btn-secondary btn-order" type="button">
                   Оформить заказ
@@ -601,7 +656,7 @@
               </section>
             </div>
           </section>
-          <section id="khinkali" class="menu-section">
+          <section id="lavash" class="menu-section">
             <h4 class="menu-section-header">Хинкали</h4>
             <div class="menu-section-wrapper">
               <section class="dish-card">
@@ -958,6 +1013,103 @@
         </section>
       </div>
     </article>
+
+    <div class="sticky-nav-menu">
+      <nav class="sticky-nav-menu-track">
+        <ul class="page-nav-slides">
+          <li class="page-nav-slide active">
+            <a href="#new-items" role="button">
+              Новинки
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#khinkali">
+              Хинкали
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#lavash">
+              Лаваши
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#georgian-shashlik">
+              Шашлык по грузински
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#salats">
+              Салаты
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#new-items">
+              Новинки
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#khinkali">
+              Хинкали
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#lavash">
+              Лаваши
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#georgian-shashlik">
+              Шашлык по грузински
+            </a>
+          </li>
+          <li class="page-nav-slide">
+            <a href="#new-items" role="button">
+              Новинки
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#khinkali">
+              Хинкали
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#lavash">
+              Лаваши
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#georgian-shashlik">
+              Шашлык по грузински
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#salats">
+              Салаты
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#new-items">
+              Новинки
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#khinkali">
+              Хинкали
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#lavash">
+              Лаваши
+            </a>
+          </li>
+          <li class="page-nav-slide" role="button">
+            <a href="#georgian-shashlik">
+              Шашлык по грузински
+            </a>
+          </li>             
+        </ul>
+      </nav>
+    </div>
 
     <script type="module" src="/src/main.js" defer></script>
     <script type="module" src="/src/index.js" defer></script>
