feat(stories): add HTML structure for stories modal

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -480,28 +480,21 @@
                     <img src="../assets/images/story-img.png" alt="story-img">
                   </span>
               </div>
-              <div class="story">
-                  <span class="photo">
-                    <img src="../assets/images/story-img.png" alt="story-img">
-                  </span>
-              </div>
-              <div class="story">
-                  <span class="photo">
-                    <img src="../assets/images/story-img.png" alt="story-img">
-                  </span>
-              </div>
-              <div class="story">
-                  <span class="photo">
-                    <img src="../assets/images/story-img.png" alt="story-img">
-                  </span>
-              </div>
-              <div class="story">
-                  <span class="photo">
-                    <img src="../assets/images/story-img.png" alt="story-img">
-                  </span>
-              </div>
             </div>
           </section>
+        </div>
+        <div class="instagram-stories-modal">
+          <button class="instagram-stories-btn-prev" type="button">
+            <img src="../assets/images/left-arrow-icon.svg" alt="left-arrow-icon">
+          </button>
+          <button class="instagram-stories-btn-next" type="button">
+            <img src="../assets/images/right-arrow-icon.svg" alt="right-arrow-icon">
+          </button>
+          <button class="instagram-stories-btn-close-modal" type="button">
+            <img src="../assets/images/close-icon.svg" alt="close-icon">
+          </button>
+          <div class="instagram-stories-modal-container">
+          </div>
         </div>
       </article>
 
