fix(modals): fix synchronized switching toggle

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -282,7 +282,7 @@
                 <div class="toggle-button-cover">
                   <div class="button-cover">
                     <div class="button-switch" id="button-switch">
-                      <input type="checkbox" class="checkbox" />
+                      <input type="checkbox" class="checkbox" id="checkbox1" />
                       <div class="knobs">
                         <span>Доставка</span>
                       </div>
@@ -1113,7 +1113,7 @@
         <div class="toggle-button-cover">
           <div class="button-cover">
             <div class="button-switch" id="button-switch">
-              <input type="checkbox" class="checkbox" />
+              <input type="checkbox" class="checkbox" id="checkbox2"/>
               <div class="knobs">
                 <span>Доставка</span>
               </div>
