fix(modals): fix switch button and elements

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1109,7 +1109,7 @@
         <button class="btn close-icon" type="button">
           <img src="../assets/images/close-icon.svg" alt="close-icon">
         </button>
-        <h4>Выберете адрес доставки</h4>
+        <h4 id="header-change-address">Выберете адрес доставки</h4>
         <div class="toggle-button-cover">
           <div class="button-cover">
             <div class="button-switch" id="button-switch">
