--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1182,6 +1182,72 @@
           <button class="btn btn-secondary apply-address" type="button">
             Выбрать
           </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal modal-book-table">
+      <div class="modal-container">
+        <button class="btn close-icon" type="button">
+          <img src="../assets/images/close-icon.svg" alt="close-icon">
+        </button>
+        <h4 id="header-book-table">Выберете желаемую дату и время посещения</h4>
+        <div class="modal-wrapper">
+          <div class="form-group">
+            <div class="form-group">
+              <div class="input-wrapper">
+                <input type="text" class="form-input name" placeholder="Имя" required />
+                <span class="placeholder-star">*</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-wrapper">
+                  <input type="tel" class="form-input telephone" placeholder="+7(999) - 999 - 99 - 99" required />
+                  <span class="placeholder-star">*</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-wrapper">
+                <input type="text" class="form-input people-amount" placeholder="Количество персон" required />
+                <span class="placeholder-star">*</span>
+              </div>
+            </div>
+            <div class="form-group form-group-row">
+              <div class="input-wrapper">
+                <label for="date" class="form-label">
+                  Дата<span class="required">*</span>
+                </label>
+                <input type="text" id="date" class="form-input date" placeholder="17.10.2024" required />
+              </div>
+              <div class="input-wrapper">
+                <label for="time" class="form-label">
+                  Время<span class="required">*</span>
+                </label>
+                <input type="text" id="time" class="form-input time" placeholder="21:30" required />
+              </div>
+            </div>
+            <div class="form-group">
+              <textarea
+                id="comments"
+                class="form-textarea"
+                placeholder="Пожелания к брони"
+              ></textarea>
+            </div>
+            <label class="radio-label">
+              <input type="radio" name="time-option" class="radio-input" id="time2" />
+              <span class="radio-custom"></span>
+              <span class="policy-agreement">
+                Даю согласие на обработку
+                <a href="http://" target="_blank" rel="noopener noreferrer">
+                  персональных данных
+                </a>
+              </span>
+            </label>
+          </div>
+          <button class="btn btn-secondary btn-order-table" type="button">
+            Забронировать стол
+          </button>
+        </div>
       </div>
     </div>
 
