feat(html): add sapn for total price in button

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -421,6 +421,7 @@
                   </div>
                 </section>
                 <button class="btn btn-secondary btn-order" type="button">
+                  <span class="total-price"></span>
                   Оформить заказ
                 </button>
               </div>
@@ -1234,7 +1235,7 @@
               ></textarea>
             </div>
             <label class="radio-label">
-              <input type="radio" name="time-option" class="radio-input" id="time2" />
+              <input type="radio" name="policy-agreement-option" class="radio-input" id="time2" />
               <span class="radio-custom"></span>
               <span class="policy-agreement">
                 Даю согласие на обработку
