--- a/public/html/checkout.html
+++ b/public/html/checkout.html
@@ -368,14 +368,14 @@
             <section class="choose-time">
               <h2 id="choose-time-header">Выберете время</h2>
               <label class="radio-label">
-                <input type="radio" name="time-option" class="radio-input" id="closest-time-checkbox" />
+                <input type="radio" name="time-option" class="radio-input"/>
                 <span class="radio-custom"></span>
                 <span class="choose-time-checkbox-text">
                   Ближайшее время
                 </span>
               </label>
               <label class="radio-label">
-                <input type="radio" name="time-option" class="radio-input" id="choose-time-checkbox" />
+                <input type="radio" name="time-option" class="radio-input"/>
                 <span class="radio-custom"></span>
                 <span class="choose-time-checkbox-text">
                   Указать время
@@ -386,7 +386,7 @@
                   <label for="date" class="form-label">
                     Дата<span class="required">*</span>
                   </label>
-                  <input type="text" id="date" class="form-input date" placeholder="17.10.2024" required />
+                  <input type="text" id="date" class="form-input date" placeholder="17.10" required />
                 </div>
                 <div class="input-wrapper">
                   <label for="time" class="form-label">
@@ -399,21 +399,21 @@
             <section class="payment-method">
               <h2 id="payment-method-header">Оплата</h2>
               <label class="radio-label">
-                <input type="radio" name="payment-method-option" class="radio-input" id="paiment-method-online" />
+                <input type="radio" name="payment-method-option" class="radio-input" />
                 <span class="radio-custom"></span>
                 <span class="choose-time-checkbox-text">
                   Онлайн
                 </span>
               </label>
               <label class="radio-label">
-                <input type="radio" name="payment-method-option" class="radio-input" id="paiment-method-card" />
+                <input type="radio" name="payment-method-option" class="radio-input" />
                 <span class="radio-custom"></span>
                 <span class="choose-time-checkbox-text">
                   Картой курьеру
                 </span>
               </label>
               <label class="radio-label">
-                <input type="radio" name="payment-method-option" class="radio-input" id="paiment-method-cash" />
+                <input type="radio" name="payment-method-option" class="radio-input" />
                 <span class="radio-custom"></span>
                 <span class="choose-time-checkbox-text">
                   Наличными курьеру
@@ -886,7 +886,7 @@
               <label for="date" class="form-label">
                 Дата<span class="required">*</span>
               </label>
-              <input type="text" id="date" class="form-input date" placeholder="17.10.2024" required />
+              <input type="text" id="date" class="form-input date" placeholder="17.10" required />
             </div>
             <div class="input-wrapper">
               <label for="time" class="form-label">
