fix(modals): fix cart displaing without toggle button and divs for delivery and pickup

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -507,6 +507,62 @@
                       </div>
                     </div>
                   </div>
+                  <div class="cart-dish-card">
+                    <img
+                      class="dish-card-img"
+                      src="../assets/images/cart-dish-img.png"
+                      alt="cart-dish-img"
+                    >
+                    <div class="dish-card-wrapper">
+                      <p class="dish-card-name">
+                        Хинкали жареные с телятиной 4шт.
+                      </p>
+                      <div class="cart-dish-info">
+                        <p class="price-weight">
+                          <span class="price">1250</span>
+                          <span class="currency">₽</span>/
+                          <span class="weight">250</span>гр
+                        </p>
+                        <div class="amount-counter">
+                          <button class="btn counter-minus" type="button">
+                            -
+                          </button>
+                          <span class="counter-amount">1</span>
+                          <button class="btn counter-plus" type="button">
+                            +
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="cart-dish-card">
+                    <img
+                      class="dish-card-img"
+                      src="../assets/images/cart-dish-img.png"
+                      alt="cart-dish-img"
+                    >
+                    <div class="dish-card-wrapper">
+                      <p class="dish-card-name">
+                        Хинкали жареные с телятиной 4шт.
+                      </p>
+                      <div class="cart-dish-info">
+                        <p class="price-weight">
+                          <span class="price">1250</span>
+                          <span class="currency">₽</span>/
+                          <span class="weight">250</span>гр
+                        </p>
+                        <div class="amount-counter">
+                          <button class="btn counter-minus" type="button">
+                            -
+                          </button>
+                          <span class="counter-amount">1</span>
+                          <button class="btn counter-plus" type="button">
+                            +
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </section>
                 <button class="btn btn-secondary btn-order" type="button">
                   <span class="total-price"></span>
