--- a/public/html/checkout.html
+++ b/public/html/checkout.html
@@ -73,11 +73,96 @@
             </li>
           </ul>
         </nav>
-
         <a class="header-top-telephone" href="tel:+74212777777">
           <img src="../assets/images/phone-icon.svg" alt="phone-icon">
           <span>+74212 77-77-77</span>
         </a>
+        <div class="mobile-menu">
+          <div class="mobile-menu-container">
+            <button class="btn mobile-btn-close-top-menu" type="button">
+              <img src="../assets/images/close-icon.svg" alt="close-icon">
+            </button>
+            <button class="btn btn-primary btn-book-table btn-mobile-book-table" type="button">
+              <img src="../assets/images/khinkali-icon.svg" alt="khinkali-icon">
+              <span>Забронировать стол</span>
+            </button>
+            <nav class="mobile-header-top-nav">
+              <ul class="mobile-header-top-nav-list">
+                <li class="mobile-header-top-nav-item">
+                  <a
+                    class="nav-item-link"
+                    href="http://"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                    Доставка
+                  </a>
+                </li>
+                <li class="mobile-header-top-nav-item">
+                  <a
+                    class="nav-item-link"
+                    href="http://"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                    Афиша
+                  </a>
+                </li>
+                <li class="mobile-header-top-nav-item">
+                  <a
+                    class="nav-item-link"
+                    href="http://"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    О нас
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <div class="tel-link">
+              <a class="mobile-header-top-telephone" href="tel:+74212777777" target="_blank" rel="noopener noreferrer">
+                <span>+74212 77-77-77</span>
+              </a>
+              <span class="tel-link-text">
+                Ресторан грузинкской кухни “Марани”
+              </span>
+            </div>
+            <a class="btn btn-primary btn-build-route" role="button" href="http://" target="_blank" rel="noopener noreferrer">
+              Построить маршрут
+            </a>
+            <nav class="mobile-social-media">
+              <ul class="mobile-social-medial-list">
+                <li class="mobile-social-medial-list-item">
+                  <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <img
+                      src="../assets/images/mobile-vk-icon.svg"
+                      alt="mobile-vk-icon"
+                    >
+                  </a>
+                </li>
+                <li class="mobile-social-medial-list-item">
+                  <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <img
+                      src="../assets/images/mobile-telegram-icon.svg"
+                      alt="mobile-telegram-icon"
+                    >
+                  </a>
+                </li>
+                <li class="mobile-social-medial-list-item">
+                  <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <img
+                      src="../assets/images/mobile-whatsapp-icon.svg"
+                      alt="mobile-whatsapp-icon"
+                    >
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <button class="btn btn-mobile-burger" type="button">
+          <img src="../assets/images/burger-icon.svg" alt="burger-icon">
+        </button>
       </section>
       <section class="header-bottom">
         <div id="static-nav-menu" class="header-bottom-page-nav-glide">
@@ -179,6 +264,9 @@
         <div class="header-bottom-wrapper">
           <aside class="cart">
             <div class="cart-container">
+              <button class="btn close-icon">
+                <img src="../assets/images/close-icon.svg" alt="close-icon">
+              </button>
               <h4 class="cart-header">Мой заказ</h4>
               <div class="toggle-button-cover">
                 <div class="button-cover">
@@ -919,6 +1007,14 @@
       </div>
     </div>
   </div>
+
+  <button class="btn btn-secondary btn-open-cart" type="button">
+    <div class="btn-icon">
+      <img src="../assets/images/khinkali-icon.svg" alt="khinkali-icon">
+    </div>
+    <span class="total-price">825₽</span>
+    к оформлению
+  </button>
 
   <script type="module" src="/src/main.js" defer></script>
   <script type="module" src="/src/checkout.js" defer></script>
