chore: change article class

--- a/public/html/checkout.html
+++ b/public/html/checkout.html
@@ -421,7 +421,7 @@
   </header>
 
   <main>
-    <article class="checkout">
+    <article class="checkout-form">
       <div class="checkout-container">
         <h1 id="checkout-header">Оформление заказа</h1>
         <div class="checkout-wrapper">
