fix: fix style for images in cards

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -654,7 +654,7 @@
             <h4 class="menu-section-header">Хинкали</h4>
             <div class="menu-section-wrapper">
               <section class="dish-card">
-                <img src="../assets/images/dish-img.jpg" alt="dish-img" />
+                <img src="../assets/images/square-image.png" alt="dish-img" />
                 <div class="dish-text-content">
                   <h5 class="dish-header">Хинкали с бараниной и тестом</h5>
                   <p class="dish-description">
