feat(cart): update HTML markup for cart

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -365,7 +365,7 @@
               </div>
             </section>
 
-            <aside class="cart">
+            <aside class="cart" data-attr="static">
               <div class="cart-container">
                 <button class="btn close-icon">
                   <img src="../assets/images/close-icon.svg" alt="close-icon" />
